--- a/cronJob/package.json
+++ b/cronJob/package.json
@@ -11,7 +11,7 @@
     "assert": "^1.4.1",
     "cron": "^1.3.0",
     "fs": "0.0.1-security",
-    "mongodb": "2.2",
+    "mysql": "^2.16.0",
     "request": "^2.87.0"
   }
 }
